--- a/DBTek.Crypto/DBTek.Crypto.csproj
+++ b/DBTek.Crypto/DBTek.Crypto.csproj
@@ -71,8 +71,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base64.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="CRC32.cs" />
     <Compile Include="ClearData.cs" />
+    <Compile Include="Helpers\HMACMD5Helper.cs" />
+    <Compile Include="Helpers\MD5Helper.cs" />
     <Compile Include="HMACMD5.cs" />
     <Compile Include="IEncoder.cs" />
     <Compile Include="IHasher.cs" />
