--- a/DBTek.Crypto/DBTek.Crypto.csproj
+++ b/DBTek.Crypto/DBTek.Crypto.csproj
@@ -70,28 +70,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Base64.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="CRC32.cs" />
-    <Compile Include="ClearData.cs" />
     <Compile Include="Helpers\CRC32Helper.cs" />
-    <Compile Include="Helpers\HMACMD5Helper.cs" />
-    <Compile Include="Helpers\MD5Helper.cs" />
     <Compile Include="HMACMD5.cs" />
-    <Compile Include="IEncoder.cs" />
-    <Compile Include="IHasher.cs" />
-    <Compile Include="MD5.cs" />
-    <Compile Include="QPE.cs" />
-    <Compile Include="Rijndael.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rijndael.cs" />
     <Compile Include="Sha1.cs" />
     <Compile Include="TripleDES.cs" />
     <Compile Include="UnixCrypt.cs" />
     <Compile Include="UnixCryptAlg\ArrayPointer.cs" />
     <Compile Include="UnixCryptAlg\CryptImpl.cs" />
     <Compile Include="UnixCryptAlg\CryptUtils.cs" />
-    <Compile Include="Utils.cs" />
-    <Compile Include="UUEncoder.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -110,9 +99,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="Info.txt" />
-  </ItemGroup>
+  <Import Project="..\DBTek.Crypto.Shared\DBTek.Crypto.Shared.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>if $(ConfigurationName) == Release (
