--- a/DBTek.Crypto.Windows/DBTek.Crypto.Windows.csproj
+++ b/DBTek.Crypto.Windows/DBTek.Crypto.Windows.csproj
@@ -111,6 +111,12 @@
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Release (
+xcopy "*Crypto*.dll" "$(SolutionDir)NuGet\Package\lib\win8" /R /Q /Y
+xcopy "*Crypto*.xml" "$(SolutionDir)NuGet\Package\lib\win8" /R /Q /Y
+)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
