--- a/DBTek.Crypto.WindowsPhoneSL/DBTek.Crypto.WindowsPhoneSL.csproj
+++ b/DBTek.Crypto.WindowsPhoneSL/DBTek.Crypto.WindowsPhoneSL.csproj
@@ -89,6 +89,12 @@
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <ProjectExtensions />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Release (
+xcopy "*Crypto*.dll" "$(SolutionDir)NuGet\Package\lib\wp8" /R /Q /Y
+xcopy "*Crypto*.xml" "$(SolutionDir)NuGet\Package\lib\wp8" /R /Q /Y
+)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
