--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,12 @@ on: [push]
 jobs:
   build:
 
-    runs-on: [windows-latest]
+    runs-on: [windows-2019]
 
     steps:
     - uses: actions/checkout@v1
-    - name: Build
-      run: msbuild DBTek.Crypto.sln -p:Configuration=Release
+    - name: Build DotNET35
+      run: |
+           cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
+           .\MSBuild.exe $Env:GITHUB_WORKSPACE\pathtoyoursolutionorproject
 
