--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,15 @@ jobs:
     
     # Install Nuget
     - name: Install Nuget
-      run: curl https://dist.nuget.org/win-x86-commandline/v5.3.0/nuget.exe -o nuget.exe
+      run: |
+           mkdir C:\NuGet
+           curl https://dist.nuget.org/win-x86-commandline/v5.3.0/nuget.exe -o  C:\NuGet\nuget.exe
       
     # Nuget restore
     - name: Use NuGet to restore dependencies as well as project-specific tools that are specified in the project file
-      run: nuget restore
+      run:  C:\NuGet\nuget.exe restore .\DBTek.Crypto.sln
       
     # dotnet msbuild 
     - name: msBuild with dotnet
       shell: pwsh
-      run: C:\"Program Files (x86)"\"Microsoft Visual Studio"\2019\Enterprise\MSBuild\Current\Bin\msbuild.exe .\DBTek.Crypto.sln /t:rebuild /p:Configuration=Release
+      run: C:\"Program Files (x86)"\"Microsoft Visual Studio"\2019\Enterprise\MSBuild\Current\Bin\msbuild.exe .\DBTek.Crypto.sln /t.\DBTek.Cryp:rebuild /p:Configuration=Release
