--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
       run: msbuild DBTek.Crypto.Test/DBTek.Crypto.Test.csproj
     
     - name: Execute Unit Tests
-      run: vstest.console.exe **/*.Tests.dll
+      run: vstest.console.exe **/*.Test.dll
